# paperboy

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  docker-compose.yml  subs_example.txt  subscriptions.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  deliver.yml  manual.yml  release.yml
crates/paperboy/: Cargo.toml
crates/paperboy-cli/: Cargo.toml
crates/paperboy-cli/src/: cli.rs  deliver.rs  main.rs
crates/paperboy/src/: error.rs  lib.rs  mailer.rs  rss.rs  subscriptions.rs
docs/: DEVELOPMENT.md
emails/: daily_email.hbs  daily_email_text.hbs
paperboy/: Cargo.toml
paperboy-cli/: Cargo.toml
paperboy-cli/src/: cli.rs  deliver.rs  main.rs
paperboy/src/: error.rs  lib.rs  mailer.rs  paperboy.rs  rss.rs  subscriptions.rs
scripts/: install.sh
src/: error.rs  mailer.rs  main.rs  paperboy.rs  rss.rs  subscriptions.rs
