[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[workspace.package]
edition = "2021"
authors = ["Eduardo Stuart <e@s.tuart.me>"]
readme = "./README.md"
homepage = "https://github.com/eduardostuart/paperboy"
repository = "https://github.com/eduardostuart/paperboy.git"
description = "Get new posts from all your favorite sites by email."
documentation = "https://docs.rs/paperboy"
license = "MIT"
keywords = ["rss", "feed", "rss-reader"]