[package]
name = "paperboy-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
paperboy = { path = "../paperboy"}
tokio = { version = "1.13.1", features = ["full"] }

[[bin]]
name = "paperboy"
path = "./src/main.rs"