[package]
name = "paperboy-cli"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
tokio = { version = "1.13.1", features = ["full"] }
clap-verbosity-flag = "1.0.0"
log = "0.4.14"
simple_logger = "2.1.0"
paperboy = { path = "../paperboy"}

[[bin]]
name = "paperboy"
path = "./src/main.rs"