[package]
name = "paperboy"
version = "0.1.2"
edition = "2021"
authors = ["Eduardo Stuart <e@s.tuart.me>"]
readme = "../README.md"
homepage = "https://github.com/eduardostuart/paperboy"
repository = "https://github.com/eduardostuart/paperboy.git"
description = "Get new posts from all your favorite sites by email."
license = "MIT"
documentation = "https://docs.rs/paperboy"
keywords = ["rss", "feed", "rss-reader"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.10.0-rc.4", features = ["rustls-tls"]}
tokio = { version = "1.17", features = ["full"] }
futures = "0.3.21"
feed-rs = "1.1"
chrono = "0.4.21"
handlebars = "4.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
regex = "1.5.5"

[dev-dependencies]
rand = "0.8.4"