[package]
name = "paperboy-cli"
version = "0.2.4"
edition = "2021"
description = "Paperboy CLI"

[dependencies]
paperboy = { path = "../paperboy"}
clap = { version = "4.6", features = ["derive"] }
clap-verbosity-flag = "3.0"
simple_logger = "5.0"
tokio = { workspace= true }
log = { workspace = true}

[[bin]]
name = "paperboy"
path = "./src/main.rs"