[package]
name = "paperboy"
version = "0.1.3"
description = "Get new posts from all your favorite sites by email."
documentation = "https://docs.rs/paperboy"
keywords = ["rss", "feed", "rss-reader"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11.2", features = ["rustls-tls"]}
futures = "0.3.21"
feed-rs = "1.1"
chrono = "0.4.21"
handlebars = "4.1.4"
regex = "1.5.5"
serde = { workspace = true }
serde_json = { workspace = true }
log =  { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rand = "0.8.4"