[package]
name = "paperboy"
version = "0.1.3"
description = "Get new posts from all your favorite sites by email."
documentation = "https://docs.rs/paperboy"
keywords.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11.11", features = ["rustls-tls"]}
futures = "0.3.32"
feed-rs = "2.3"
chrono = "0.4.44"
handlebars = "6.3"
regex = "1.11"
serde = { workspace = true }
serde_json = { workspace = true }
log =  { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rand = "0.9"
mockito = "1.7"
tempfile = "3.10"